# keel

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAYBOOK.md  README.md  docker-entrypoint.sh  package.json  render.yaml
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: ci.yml  release.yml
.keel/: attempts.jsonl  changelog.jsonl  config.json  snapshot.md  state.json
deliverables/: AGENT_POLICY.md  OUTREACH_LIST.csv  SCOPE_ONE_PAGER.md  TEAM_PLAYBOOK.md
deliverables/github-workflows/: agent-pr-check.yml
docs/: DESIGN_BRIEF.md  HANDOFF.md  SHOW_HN.md
examples/: github-keel-check.yml
examples/keel-compact-demo/: RECORDING.md  RESULTS.md  demo.cast  demo.sh
examples/keel-compact-demo/results/with-keel/: phase1.json  phase2.json  phase3.json  phase3.txt  server_after_phase1.js
examples/nexus-ping-demo/: RESULTS.md  demo.cast  demo.sh  record.sh
examples/nexus-ping-demo/artifacts/: with-keel-changelog.jsonl
npm/keel-cli/: package.json
npm/keel-cli/scripts/: prep-publish.js  sync-version.js  verify-shim.js
scripts/: deploy-render.sh  release.sh  stage-npm.sh
src/: acceptance.rs  check.rs  cloud.rs  constraints.rs  doctor.rs  goal_edit.rs  hooks.rs  install.rs  lib.rs  loop_breaker.rs  main.rs  onboard.rs  paths.rs  policy.rs  snapshot.rs  state.rs  tui.rs
src/server/: db.rs  mod.rs
tests/: integration.rs
web/: account.html  app.js  dashboard-edit.html  dashboard.html  index.html  login.html  new.html  pricing.html  site.css  start.html  team.html  trust.html
(+15 files in other folders)
