[package]
name = "keel"
version = "0.4.0"
edition = "2021"
description = "Repo-local agent state for Claude Code and Codex"
license = "Apache-2.0"
readme = "README.md"
keywords = ["claude-code", "codex", "ai-agent", "hooks"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "keel"
path = "src/main.rs"

[[bin]]
name = "keel-server"
path = "src/bin/keel_server.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
signature = "2"
rand = "0.8"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "2.10", features = ["json"] }
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
